# msa

./: README.md  requirements.txt  setup.py
cpp/: CMakeLists.txt
cpp/cpp_odbc/: CMakeLists.txt  readme.md
cpp/cpp_odbc/Test/: CMakeLists.txt
cpp/cpp_odbc/Test/cpp_odbc_test/: level1_mock_api.cpp  level1_mock_api.h  level2_mock_api.cpp  level2_mock_api.h  mock_connection.h  mock_environment.h  mock_statement.h
cpp/cpp_odbc/Test/tests/: column_description_test.cpp  connection_test.cpp  credentials_test.cpp  environment_test.cpp  error_test.cpp  make_environment_test.cpp  multi_value_buffer_test.cpp  statement_test.cpp
cpp/cpp_odbc/Test/tests/level1/: api_test.cpp
cpp/cpp_odbc/Test/tests/level2/: api_test.cpp  fixed_length_string_buffer_test.cpp  handles_test.cpp  input_string_buffer_test.cpp  input_u16string_buffer_test.cpp  level1_connector_test.cpp  string_buffer_test.cpp  u16string_buffer_test.cpp
cpp/cpp_odbc/Test/tests/level3/: raii_connection_test.cpp  raii_environment_test.cpp  raii_statement_test.cpp
cpp/turbodbc/: CMakeLists.txt
cpp/turbodbc/Test/: CMakeLists.txt
cpp/turbodbc/Test/tests/: buffer_size_test.cpp  column_test.cpp  command_test.cpp  configuration_test.cpp  connection_test.cpp  description_test.cpp  errors_test.cpp  field_translator_test.cpp  make_description_of_description_test.cpp  make_description_of_type_test.cpp  make_description_of_value_test.cpp  make_field_translator_test.cpp  mock_classes.cpp  mock_classes.h  parameter_test.cpp  string_helpers_test.cpp  time_helpers_test.cpp
cpp/turbodbc/Test/tests/descriptions/: boolean_description_test.cpp  date_description_test.cpp  floating_point_description_test.cpp  integer_description_test.cpp  string_description_test.cpp  timestamp_description_test.cpp  unicode_description_test.cpp
cpp/turbodbc/Test/tests/field_translators/: boolean_translator_test.cpp  date_translator_test.cpp  float64_translator_test.cpp  int64_translator_test.cpp  string_translator_test.cpp  timestamp_translator_test.cpp
cpp/turbodbc/Test/tests/parameter_sets/: bound_parameter_set_test.cpp  set_field_test.cpp
cpp/turbodbc/Test/tests/result_sets/: bound_result_set_test.cpp  double_buffered_result_set_test.cpp  field_result_set_test.cpp  result_set_test.cpp  row_based_result_set_test.cpp
cpp/turbodbc_arrow/: CMakeLists.txt
cpp/turbodbc_arrow/Test/: CMakeLists.txt
cpp/turbodbc_arrow/Test/tests/: arrow_result_set_test.cpp
cpp/turbodbc_numpy/: CMakeLists.txt
cpp/turbodbc_python/: CMakeLists.txt
examples/: TableQuery.ipynb
msa/: __init__.py  config.py  connection.py  cursor.py  server.py  table.py  utils.py
msa/odbc/: connection.py  cursor.py  server.py
msa/pymssql/: __init__.py  connection.py  cursor.py  server.py
msa/utils/: __init__.py  arrow.py  metadata.py  statements.py  typing.py
tests/: __init__.py  test_foreign_table.py  test_server.py  test_table.py  test_view.py
tests/pymssql/: test_server.py  test_table.py
tests/pyodbc/: test_server.py  test_table.py  test_utils.py
tests/pyodbc_/: test_server.py  test_table.py
tests/utils/: test_arrow.py  test_utils.py
